[build-system]
requires = [
    "setuptools<74",
    "wheel",
    "Cython>=3.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "lifelib-pyql"
version = "0.0.1"
description = "QuantLib Cython wrappers"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors = [
    { name = "Didrik Pinte" },
    { name = "Patrick Henaff" }
]
dependencies = [
    "tabulate",
    "pandas",
    "six"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lifelib_pyql*"]
exclude = ["test*"]

# ---------------------------------------------------------------------------
# cibuildwheel configuration
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"
before-build = "pip install numpy cython"
test-requires = ["pandas", "tabulate", "six"]
test-command = "cd {project} && python -m unittest discover -v"
build-verbosity = 1

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "bash {project}/ci/install_quantlib_linux.sh"
environment = { QUANTLIB_INCLUDE_DIR="/usr/local/include", BOOST_INCLUDE_DIR="/usr/local/include", QUANTLIB_LIBRARY_DIR="/usr/local/lib" }

[tool.cibuildwheel.macos]
before-all = "brew install boost quantlib"
environment = { QUANTLIB_INCLUDE_DIR="/usr/local/include", BOOST_INCLUDE_DIR="/usr/local/include", QUANTLIB_LIBRARY_DIR="/usr/local/lib" }

[tool.cibuildwheel.windows]
before-all = "powershell -ExecutionPolicy Bypass -File {project}/ci/install_quantlib_windows.ps1"
environment = { QUANTLIB_INCLUDE_DIR="C:/quantlib-deps/QuantLib-1.41", BOOST_INCLUDE_DIR="C:/quantlib-deps/boost_1_78_0", QUANTLIB_LIBRARY_DIR="C:/quantlib-deps/QuantLib-1.41/lib", QL_LIBRARY_NAME="QuantLib-x64-mt" }
repair-wheel-command = "delvewheel repair --add-path C:/quantlib-deps/QuantLib-1.41/lib -w {dest_dir} {wheel}"
